--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <artifactId>connect</artifactId>
     <packaging>jar</packaging>
-    <version>1.0.0-develop-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
     <name>Connect</name>
 
     <parent>
